--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 </head>
 <body>
     <div class="background-slideshow">
-        <img src="your-photo1.jpg" class="bg-slide" alt="Us">
-        <img src="your-photo2.jpg" class="bg-slide" alt="Together">
-        <img src="your-photo3.jpg" class="bg-slide" alt="Love">
+        <img src="yourphoto1.jpeg" class="bg-slide" alt="Us">
+        <img src="yourphoto2.jpeg" class="bg-slide" alt="Together">
+        <img src="yourphoto3.jpeg" class="bg-slide" alt="Love">
     </div>
 
     <h1>Happy Valentine's Day, My Love ❤️</h1>
